# food-label-auditor-rl

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
data/: adversarial_cases.json  ground_truth.json  products.json  user_profiles.json
docs/: plan_for_finale.md
openenv_food_label_auditor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: build_dataset.py
server/: Dockerfile  __init__.py  app.py  food_label_auditor_environment.py  graders.py
tests/: conftest.py  test_environment.py  test_graders.py  test_integration.py  test_models.py
